Fix #1 reduce upload button z-index

--- a/src/components/vue-file-agent.css
+++ b/src/components/vue-file-agent.css
@@ -83,6 +83,10 @@
   z-index: 11;
 }
 
+.vue-file-agent .file-preview-new .file-preview {
+  z-index: 8;
+}
+
 .vue-file-agent .file-preview .file-name {
   position: absolute;
   top: 0;
